fixed collapse lock further

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -27,7 +27,8 @@
 
 #sidebar.collapsed .sidebar-item-label,
 #sidebar.collapsed #heading,
-#sidebar.collapsed .profile-button h3 {
+#sidebar.collapsed .profile-button h3,
+#sidebar.collapsed #heading-logo {
   display: none;
 }
 
@@ -297,5 +298,11 @@
   .tooltip {
     font-size: 12px;
     padding: 6px 12px;
+  }
+}
+
+@media (max-width: 1000px) {
+  #sidebar.collapsed #heading-logo {
+    display: block;
   }
 }
